--- a/index.html
+++ b/index.html
@@ -13,9 +13,21 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>BestShop</title>
 </head>
 <body>
-
+<header class="header">
+    <div class="header-container">
+        <span class="logo">BestShop</span>
+        <nav class="nav">
+            <div class="nav-list">
+                <li class="nav-list-el"><a class="nav-list-link" href="" >WHY US</a></li>
+                <li class="nav-list-el"><a class="nav-list-link" href="" >BENEFITS</a></li>
+                <li class="nav-list-el"><a class="nav-list-link" href="" >PRICES</a></li>
+                <li class="nav-list-el"><a class="nav-list-link" href="" >CONTACT</a></li>
+            </div>
+        </nav>
+    </div>
+</header>
 </body>
 </html>
