--- a/index.html
+++ b/index.html
@@ -17,15 +17,23 @@
 </head>
 <body>
 <header class="header">
-    <div class="header-container">
-        <span class="logo">BestShop</span>
+    <div class="header-container .container">
+        <a href="#" class="logo">BestShop</a>
         <nav class="nav">
-            <div class="nav-list">
-                <li class="nav-list-el"><a class="nav-list-link" href="" >WHY US</a></li>
-                <li class="nav-list-el"><a class="nav-list-link" href="" >BENEFITS</a></li>
-                <li class="nav-list-el"><a class="nav-list-link" href="" >PRICES</a></li>
-                <li class="nav-list-el"><a class="nav-list-link" href="" >CONTACT</a></li>
-            </div>
+            <ul class="header-nav">
+                <li class="nav-element">
+                    <a href="#why-us" class="nav-link">Why us</a>
+                </li>
+                <li class="nav__element">
+                    <a href="#benefits" class="nav-link">Benefits</a>
+                </li>
+                <li class="nav__element">
+                    <a href="#prices" class="nav-link">Prices</a>
+                </li>
+                <li class="nav__element">
+                    <a href="#contact" class="nav-link">Contact</a>
+                </li>
+            </ul>
         </nav>
     </div>
 </header>
