--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 <header class="header">
-    <div class="header-container .container">
+    <div class="header-container container">
         <a href="#" class="logo">BestShop</a>
         <nav class="nav">
             <ul class="header-nav">
@@ -37,5 +37,164 @@
         </nav>
     </div>
 </header>
+<div class="hero container">
+    <div class="banner">
+        <h1 class="banner-title">
+            Sell More!
+        </h1>
+        <p class="banner-text">
+            Open shop on our platform and increase your sales
+        </p>
+        <div class="banner-button">
+        <a href="" class="banner-button banner-btn">Open your shop</a>
+        </div>
+    </div>
+    <div class="hero-image"></div>
+</div>
+<section class="section section-platform container">
+    <h2 class="section-title">
+        The most popular sales platform in country
+    </h2>
+    <div class="platform-list">
+        <article class="platform-section">
+            <div class="border-photo border-photo-primary">
+            <a href="" class="platform-section-link">
+                <img src="assets/person.svg" class="platform-section-photo photo-primary" alt="">
+            </a>
+            </div>
+            <h3 class="platform-section-title">
+                100000*
+            </h3>
+            <p class="platform-section-text">
+                daily entries
+            </p>
+        </article>
+
+        <article class="platform-section">
+            <div class="border-photo border-photo-secondary">
+            <a href="" class="platform-section-link">
+                <img src="assets/eye.svg" class="platform-section-photo photo-secondary" alt="">
+            </a>
+            </div>
+            <h3 class="platform-section-title">
+                2000000*
+            </h3>
+            <p class="platform-section-text">
+                seen products every day
+            </p>
+        </article>
+
+        <article class="platform-section">
+            <div class="border-photo border-photo-tertiary">
+            <a href="" class="platform-section-link">
+                <img src="assets/catalog.svg" class="platform-section-photo photo-tertiary" alt="">
+            </a>
+            </div>
+            <h3 class="platform-section-title">
+                10000*
+            </h3>
+            <p class="platform-section-text">
+                added posts daily
+            </p>
+        </article>
+    </div>
+</section>
+<section class="sections-benefits container">
+    <div class="sections-benefits-box ">
+        <div class="benefits-box-primary">
+            <article class="box-primary-article ">
+                <h3 class="box-title">
+                    Be always first
+                </h3>
+                <p class="box-text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+                </p>
+                <div class="box-primary-border"></div>
+            </article>
+            <div class="benefits-photo-primary">
+                <img src="assets/macbook.png" class="sections-benefits-photo" alt="">
+                    <div class="benefits-photo-symbol-primary"></div>
+            </div>
+        </div>
+
+        <div class="benefits-box-secondary">
+            <div class="benefits-photo-secondary">
+                <img src="assets/iphone.png" class="iphone" alt="">
+                <div class="benefits-photo-symbol-secondary"></div>
+            </div>
+            <article class="box-secondary-article">
+                <h3 class="box-title box-title-secondary">
+                    Your shop is where you are!
+                </h3>
+                <p class="box-text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+                </p>
+                <div class="box-secondary-border"></div>
+            </article>
+        </div>
+
+        <div class="benefits-box-tertiary">
+            <article class="box-tertiary-article">
+                <h3 class="box-title box-title-tertiary">
+                    Increase recognition your brand!
+                </h3>
+                <p class="box-text box-text-tertiary">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+                </p>
+                <div class="box-tertiary-border"></div>
+            </article>
+            <section class="box-photo-tertiary">
+            <div class="benefits-photo-tertiary">
+                <div class="benefits-photo-symbol-tertiary"></div>
+                <img src="assets/trumpet.png" class="sections-benefits-photo trumpet" alt="">
+            </div>
+            </section>
+        </div>
+    </div>
+</section>
+<section class="price">
+    <div class="section-price container">
+        <h2 class="section-title section-title-price">
+            Pricing
+        </h2>
+        <div class="section-price-main">
+        <div class="sections-price-box">
+            <div class="box-basic">
+                <h3 class="price-box-title">
+                    Basic
+                </h3>
+                <div class="box-basic-price box-price">
+                    $0
+                </div>
+                <p class="box-basic-text">
+                    100 MB HDD
+                </p>
+            </div>
+        </div>
+            <div class="box-professional">
+                <h3 class="price-box-title">
+                    Professional
+                </h3>
+                <div class="box-professional-price box-price">
+                    $25
+                </div>
+                <p class="box-professional-text">
+                    500 MB HDD
+                </p>
+        </div>
+            <div class="box-premium">
+                <h3 class="price-box-title">
+                    Premium
+                </h3>
+                <div class="box-premium-price box-price">
+                    $60
+                </div>
+                <p class="box-premium-text">
+                    2 GB HDD
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
 </body>
 </html>
