--- a/index.html
+++ b/index.html
@@ -152,48 +152,94 @@
         </div>
     </div>
 </section>
-<section class="price">
-    <div class="section-price container">
+<section class="price-box container">
+    <div class="section-price ">
+
         <h2 class="section-title section-title-price">
             Pricing
         </h2>
-        <div class="section-price-main">
-        <div class="sections-price-box">
+        <div class="price-body">
+            <div class="price-main">
             <div class="box-basic">
-                <h3 class="price-box-title">
-                    Basic
-                </h3>
-                <div class="box-basic-price box-price">
-                    $0
-                </div>
-                <p class="box-basic-text">
-                    100 MB HDD
-                </p>
+                <h3 class="price-box-title">Basic</h3>
+                <div class="box-basic-price price-value">$0</div>
+
+                <ul class="price-items">
+                    <li class="price-item">100 MB HDD</li>
+                    <li class="price-item">1 Subdomain</li>
+                    <li class="price-item">2 E-mails</li>
+                    <li class="price-item price-item-not">Two years license</li>
+                    <li class="price-item price-item-not">Full support</li>
+                </ul>
+                <a href="#" class="btn btn-basic">Begin</a>
             </div>
-        </div>
+            </div>
+            <div class="price-main">
             <div class="box-professional">
-                <h3 class="price-box-title">
-                    Professional
-                </h3>
-                <div class="box-professional-price box-price">
-                    $25
-                </div>
-                <p class="box-professional-text">
-                    500 MB HDD
-                </p>
+                <h3 class="price-box-title">Professional</h3>
+                <div class="box-professional-price price-value">$25</div>
+                <p class="price-limited">Limited offer</p>
+
+                <ul class="price-items">
+                    <li class="price-item">500 MB HDD</li>
+                    <li class="price-item">2 Subdomain</li>
+                    <li class="price-item">5 E-mails</li>
+                    <li class="price-item">One years license</li>
+                    <li class="price-item price-item-not">Full support</li>
+                </ul>
+                <a href="#" class="btn btn-professional">Begin</a>
         </div>
+            </div>
+            <div class="price-main">
             <div class="box-premium">
-                <h3 class="price-box-title">
-                    Premium
-                </h3>
-                <div class="box-premium-price box-price">
-                    $60
-                </div>
-                <p class="box-premium-text">
-                    2 GB HDD
-                </p>
+                <h3 class="price-box-title">Premium</h3>
+                <div class="box-premium-price price-value">$60</div>
+                <p class="price-limited">Limited offer</p>
+
+                <ul class="price-items">
+                    <li class="price-item">2 GB HDD</li>
+                    <li class="price-item">2 Subdomain</li>
+                    <li class="price-item">20 E-mails</li>
+                    <li class="price-item">Two years license</li>
+                    <li class="price-item">Full support</li>
+                </ul>
+                <a href="#" class="btn btn-premium">Begin</a>
+            </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+<section class="section-contact container" id="contact">
+    <div class="container-contact">
+        <div class="contact-box">
+            <h2 class="contact-title">Any questions?</h2>
+            <p class="contact-text">Leave your email address or call us!</p>
+            <div class="contact-info">
+                <p class="contact-email">info@bestshop.xyz</p>
+                <p class="contact-phone">123 456 789</p>
             </div>
         </div>
+            <form class="form">
+
+                <div class="form-row">
+                    <label class="form-label" for="name">Name</label>
+                    <input class="form-control" type="text" name="name" id="name">
+                </div>
+
+                <div class="form-row">
+                    <label class="form-label" for="email">Email</label>
+                    <input class="form-control" type="email" name="email" id="email">
+                </div>
+
+                <label class="checkbox">
+                    <input class="form-control-check" type="checkbox">
+                    <span>I hereby give consent for my personal data included in my application to be processed for the purposes of the recruitment process under the European Parliament’s and Council of the European Union Regulation on the Protection of Natural Persons as of 27 April 2016, with regard to the processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC (Data Protection Directive)</span>
+                </label>
+                <div class="form-row form-row-last">
+                    <button type="submit" class="form-button">Send</button>
+                </div>
+            </form>
     </div>
 </section>
 </body>
