--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </nav>
     </div>
 </header>
-<div class="hero container">
+<div class="hero">
     <div class="banner">
         <h1 class="banner-title">
             Sell More!
@@ -46,7 +46,7 @@
             Open shop on our platform and increase your sales
         </p>
         <div class="banner-button">
-        <a href="" class="banner-button banner-btn">Open your shop</a>
+            <a href="" class="banner-button banner-btn">Open your shop</a>
         </div>
     </div>
     <div class="hero-image"></div>
@@ -58,9 +58,9 @@
     <div class="platform-list">
         <article class="platform-section">
             <div class="border-photo border-photo-primary">
-            <a href="" class="platform-section-link">
-                <img src="assets/person.svg" class="platform-section-photo photo-primary" alt="">
-            </a>
+                <a href="" class="platform-section-link">
+                    <img src="assets/person.svg" class="platform-section-photo photo-primary" alt="">
+                </a>
             </div>
             <h3 class="platform-section-title">
                 100000*
@@ -72,9 +72,9 @@
 
         <article class="platform-section">
             <div class="border-photo border-photo-secondary">
-            <a href="" class="platform-section-link">
-                <img src="assets/eye.svg" class="platform-section-photo photo-secondary" alt="">
-            </a>
+                <a href="" class="platform-section-link">
+                    <img src="assets/eye.svg" class="platform-section-photo photo-secondary" alt="">
+                </a>
             </div>
             <h3 class="platform-section-title">
                 2000000*
@@ -86,9 +86,9 @@
 
         <article class="platform-section">
             <div class="border-photo border-photo-tertiary">
-            <a href="" class="platform-section-link">
-                <img src="assets/catalog.svg" class="platform-section-photo photo-tertiary" alt="">
-            </a>
+                <a href="" class="platform-section-link">
+                    <img src="assets/catalog.svg" class="platform-section-photo photo-tertiary" alt="">
+                </a>
             </div>
             <h3 class="platform-section-title">
                 10000*
@@ -107,13 +107,14 @@
                     Be always first
                 </h3>
                 <p class="box-text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam.
                 </p>
                 <div class="box-primary-border"></div>
             </article>
             <div class="benefits-photo-primary">
                 <img src="assets/macbook.png" class="sections-benefits-photo" alt="">
-                    <div class="benefits-photo-symbol-primary"></div>
+                <div class="benefits-photo-symbol-primary"></div>
             </div>
         </div>
 
@@ -127,7 +128,8 @@
                     Your shop is where you are!
                 </h3>
                 <p class="box-text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam.
                 </p>
                 <div class="box-secondary-border"></div>
             </article>
@@ -139,15 +141,16 @@
                     Increase recognition your brand!
                 </h3>
                 <p class="box-text box-text-tertiary">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam.
                 </p>
                 <div class="box-tertiary-border"></div>
             </article>
             <section class="box-photo-tertiary">
-            <div class="benefits-photo-tertiary">
-                <div class="benefits-photo-symbol-tertiary"></div>
-                <img src="assets/trumpet.png" class="sections-benefits-photo trumpet" alt="">
-            </div>
+                <div class="benefits-photo-tertiary">
+                    <div class="benefits-photo-symbol-tertiary"></div>
+                    <img src="assets/trumpet.png" class="sections-benefits-photo trumpet" alt="">
+                </div>
             </section>
         </div>
     </div>
@@ -160,51 +163,51 @@
         </h2>
         <div class="price-body">
             <div class="price-main">
-            <div class="box-basic">
-                <h3 class="price-box-title">Basic</h3>
-                <div class="box-basic-price price-value">$0</div>
+                <div class="box-basic">
+                    <h3 class="price-box-title">Basic</h3>
+                    <div class="box-basic-price price-value">$0</div>
 
-                <ul class="price-items">
-                    <li class="price-item">100 MB HDD</li>
-                    <li class="price-item">1 Subdomain</li>
-                    <li class="price-item">2 E-mails</li>
-                    <li class="price-item price-item-not">Two years license</li>
-                    <li class="price-item price-item-not">Full support</li>
-                </ul>
-                <a href="#" class="btn btn-basic">Begin</a>
-            </div>
+                    <ul class="price-items">
+                        <li class="price-item">100 MB HDD</li>
+                        <li class="price-item">1 Subdomain</li>
+                        <li class="price-item">2 E-mails</li>
+                        <li class="price-item price-item-not">Two years license</li>
+                        <li class="price-item price-item-not">Full support</li>
+                    </ul>
+                    <a href="#" class="btn btn-basic">Begin</a>
+                </div>
             </div>
             <div class="price-main">
-            <div class="box-professional">
-                <h3 class="price-box-title">Professional</h3>
-                <div class="box-professional-price price-value">$25</div>
-                <p class="price-limited">Limited offer</p>
+                <div class="box-professional">
+                    <h3 class="price-box-title">Professional</h3>
+                    <div class="box-professional-price price-value">$25</div>
+                    <p class="price-limited">Limited offer</p>
 
-                <ul class="price-items">
-                    <li class="price-item">500 MB HDD</li>
-                    <li class="price-item">2 Subdomain</li>
-                    <li class="price-item">5 E-mails</li>
-                    <li class="price-item">One years license</li>
-                    <li class="price-item price-item-not">Full support</li>
-                </ul>
-                <a href="#" class="btn btn-professional">Begin</a>
-        </div>
+                    <ul class="price-items">
+                        <li class="price-item">500 MB HDD</li>
+                        <li class="price-item">2 Subdomain</li>
+                        <li class="price-item">5 E-mails</li>
+                        <li class="price-item">One years license</li>
+                        <li class="price-item price-item-not">Full support</li>
+                    </ul>
+                    <a href="#" class="btn btn-professional">Begin</a>
+                </div>
             </div>
             <div class="price-main">
-            <div class="box-premium">
-                <h3 class="price-box-title">Premium</h3>
-                <div class="box-premium-price price-value">$60</div>
-                <p class="price-limited">Limited offer</p>
+                <div class="box-premium">
+                    <h3 class="price-box-title">Premium</h3>
+                    <div class="box-premium-price price-value">$60</div>
+                    <p class="price-limited">Limited offer</p>
 
-                <ul class="price-items">
-                    <li class="price-item">2 GB HDD</li>
-                    <li class="price-item">2 Subdomain</li>
-                    <li class="price-item">20 E-mails</li>
-                    <li class="price-item">Two years license</li>
-                    <li class="price-item">Full support</li>
-                </ul>
-                <a href="#" class="btn btn-premium">Begin</a>
-            </div>
+                    <ul class="price-items">
+                        <li class="price-item">2 GB HDD</li>
+                        <li class="price-item">2 Subdomain</li>
+                        <li class="price-item">20 E-mails</li>
+                        <li class="price-item">Two years license</li>
+                        <li class="price-item">Full support</li>
+                    </ul>
+                    <a href="#" class="btn btn-premium">Begin</a>
+                </div>
             </div>
 
         </div>
@@ -216,31 +219,45 @@
             <h2 class="contact-title">Any questions?</h2>
             <p class="contact-text">Leave your email address or call us!</p>
             <div class="contact-info">
+                <img src="assets/mail_Icon.svg" alt="mail"/>
                 <p class="contact-email">info@bestshop.xyz</p>
+                <img src="assets/phone_Icon.svg" alt="phone"/>
                 <p class="contact-phone">123 456 789</p>
             </div>
         </div>
-            <form class="form">
+        <form class="form">
 
-                <div class="form-row">
-                    <label class="form-label" for="name">Name</label>
-                    <input class="form-control" type="text" name="name" id="name">
-                </div>
+            <div class="form-row">
+                <label class="form-label" for="name">Name</label>
+                <input class="form-control" type="text" name="name" id="name">
+            </div>
 
-                <div class="form-row">
-                    <label class="form-label" for="email">Email</label>
-                    <input class="form-control" type="email" name="email" id="email">
-                </div>
+            <div class="form-row">
+                <label class="form-label" for="email">Email</label>
+                <input class="form-control" type="email" name="email" id="email">
+            </div>
 
-                <label class="checkbox">
-                    <input class="form-control-check" type="checkbox">
-                    <span>I hereby give consent for my personal data included in my application to be processed for the purposes of the recruitment process under the European Parliament’s and Council of the European Union Regulation on the Protection of Natural Persons as of 27 April 2016, with regard to the processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC (Data Protection Directive)</span>
-                </label>
-                <div class="form-row form-row-last">
-                    <button type="submit" class="form-button">Send</button>
-                </div>
-            </form>
+            <label class="checkbox">
+                <input class="form-control-check" type="checkbox">
+                <span>I hereby give consent for my personal data included in my application to be processed for the purposes of the recruitment process under the European Parliament’s and Council of the European Union Regulation on the Protection of Natural Persons as of 27 April 2016, with regard to the processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC (Data Protection Directive)</span>
+            </label>
+            <div class="form-row form-row-last button">
+                <button type="submit" class="form-button">Send</button>
+            </div>
+        </form>
     </div>
 </section>
+<footer class="footer">
+    <div class="footer__container container">
+        <div class="footer__info">
+            <a href="#" class="logo">BestShop</a>
+            <span class="footer__copy">© 2019 BestShop LTD, All Rights Reserved</span>
+        </div>
+        <div class="footer__icons">
+            <a href="#"><img src="assets/twitter.svg" alt="twitter"/></a>
+            <a href="#"><img src="assets/facebook.svg" alt="facebook"/></a>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
